my first commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <p><mark>git rm --cached "file name"</mark> is use to untrack a file in git</p>
   <p><mark>git commit -m "the commit messege"</mark> git commit is use when we want to save the snapshot of our code. it is like a caption or discription of the changes made to our codes</p>
   <p><mark>git remote add origin "repo url"</mark> is use to cnnect your local repo to github</p>
-  <p><mark>git push -u origin master</mark> is use to push our code from the local repo to thr remote repository</p>
+  <p><mark>git push -u origin master</mark> is use to push our code from the local repo to the remote repository</p>
 
 
 
