git noted created

--- a/index.html
+++ b/index.html
@@ -26,7 +26,23 @@
   <p><mark>git commit -m "the commit messege"</mark> git commit is use when we want to save the snapshot of our code. it is like a caption or discription of the changes made to our codes</p>
   <p><mark>git remote add origin "repo url"</mark> is use to cnnect your local repo to github</p>
   <p><mark>git push -u origin master</mark> is use to push our code from the local repo to the remote repository</p>
+   <br>
+   <br>
 
+ <h3><u>What is Github</u></h3>
+ <p>Github is a web based git repository service</p>
+ <p>it is a tool that enables collaboration by hosting sharred git repositories that team of developers can all contribute to</p>
+  <p>while Git hub use git, the functionality it provides is entirely different fronm git</p>
+  <p>gift is a version control system while github is an online platform for hosting and sharing code </p>
+
+  <h4><u> Why Use github</u></h4>
+  <ol type="i">
+
+    <li>Github provides a great way to store your code in a safe and remote location.</li>
+    <li>Many large open source projects are hosted on Github</li>
+    <li>Github encourage collaboration between a team of developer</li>
+    
+  </ol>
 
 
 
