git note created

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     
   </ol>
 
+<h3><u>Forking</u> this is the process of making a copy of someone else repo on git hub</h3>
+ <h3><u>Cloning:</u> this is the process on cloning someone else repo into you device</h3>
+
+
 
 
 
