--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p><mark>git push -u origin master</mark> is use to push our code from the local repo to the remote repository</p>
    <br>
    <br>
-
+<!-- this is responsive side bar -->
  <h3><u>What is Github</u></h3>
  <p>Github is a web based git repository service</p>
  <p>it is a tool that enables collaboration by hosting sharred git repositories that team of developers can all contribute to</p>
@@ -41,7 +41,7 @@
     <li>Github provides a great way to store your code in a safe and remote location.</li>
     <li>Many large open source projects are hosted on Github</li>
     <li>Github encourage collaboration between a team of developer</li>
-    
+
   </ol>
 
 <h3><u>Forking</u> this is the process of making a copy of someone else repo on git hub</h3>
